--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compile": "tsc",
     "postinstall": "tsc",
     "build": "tsc",
-    "start": "nodemon --exec npx ts-node index.ts"
+    "start": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,14 +18,14 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "ts-node": "^10.9.1",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
-    "helmet": "^5.1.1"
+    "helmet": "^5.1.1",
+    "nodemon": "^2.0.19"
   }
 }
