--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
-  "files": ["index.ts"],
+  "files": ["index.ts", "index.d.ts"],
   "ts-node": {
     "files": true
   }
