chore(package.json): update scripts to use nodemon during development

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "compile": "tsc",
     "postinstall": "tsc",
     "build": "tsc",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "start-dev": "nodemon --exec npx ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
